--- a/views/css/style.css
+++ b/views/css/style.css
@@ -33,6 +33,8 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
 .randomPizzaContainer {
